// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsView should render check for updates completed, with everything up to date 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <p>
      Last update check performed: 
      2017-02-03 13:41:36
    </p>
    <div
      className="core-settings-update-check-controls"
    >
      <ForwardRef(Bootstrap(FormCheck))
        checked={false}
        label="Check for updates at startup"
        onChange={[Function]}
        type="checkbox"
      />
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="mdi mdi-sync"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <UpdateCheckSuccessDialog
    isAppUpdateAvailable={false}
    isVisible={true}
    onOk={[Function]}
  />
  <div
    className="core-settings-section"
    onDragEnter={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <h4>
      Extra app sources
    </h4>
    <table
      className="core-settings-sources"
    >
      <tbody />
    </table>
    <div
      className="core-settings-sources-controls"
    >
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        onClick={[Function]}
      >
        <span
          className="mdi mdi-playlist-plus"
        />
        <span
          className="core-btn-text"
        >
          Add source
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div />
</div>
`;

exports[`SettingsView should render check for updates completed, with updates available 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <p>
      Last update check performed: 
      2017-02-03 13:41:36
    </p>
    <div
      className="core-settings-update-check-controls"
    >
      <ForwardRef(Bootstrap(FormCheck))
        checked={false}
        label="Check for updates at startup"
        onChange={[Function]}
        type="checkbox"
      />
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="mdi mdi-sync"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <UpdateCheckSuccessDialog
    isAppUpdateAvailable={true}
    isVisible={true}
    onOk={[Function]}
  />
  <div
    className="core-settings-section"
    onDragEnter={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <h4>
      Extra app sources
    </h4>
    <table
      className="core-settings-sources"
    >
      <tbody />
    </table>
    <div
      className="core-settings-sources-controls"
    >
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        onClick={[Function]}
      >
        <span
          className="mdi mdi-playlist-plus"
        />
        <span
          className="core-btn-text"
        >
          Add source
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div />
</div>
`;

exports[`SettingsView should render empty div while loading 1`] = `<div />`;

exports[`SettingsView should render when checking for updates 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <div
      className="core-settings-update-check-controls"
    >
      <ForwardRef(Bootstrap(FormCheck))
        checked={false}
        label="Check for updates at startup"
        onChange={[Function]}
        type="checkbox"
      />
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        disabled={true}
        onClick={[Function]}
        title="Checking..."
      >
        <span
          className="mdi mdi-sync"
        />
        <span
          className="core-btn-text"
        >
          Checking...
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div
    className="core-settings-section"
    onDragEnter={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <h4>
      Extra app sources
    </h4>
    <table
      className="core-settings-sources"
    >
      <tbody />
    </table>
    <div
      className="core-settings-sources-controls"
    >
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        onClick={[Function]}
      >
        <span
          className="mdi mdi-playlist-plus"
        />
        <span
          className="core-btn-text"
        >
          Add source
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div />
</div>
`;

exports[`SettingsView should render with check for updates disabled 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <div
      className="core-settings-update-check-controls"
    >
      <ForwardRef(Bootstrap(FormCheck))
        checked={false}
        label="Check for updates at startup"
        onChange={[Function]}
        type="checkbox"
      />
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="mdi mdi-sync"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div
    className="core-settings-section"
    onDragEnter={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <h4>
      Extra app sources
    </h4>
    <table
      className="core-settings-sources"
    >
      <tbody />
    </table>
    <div
      className="core-settings-sources-controls"
    >
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        onClick={[Function]}
      >
        <span
          className="mdi mdi-playlist-plus"
        />
        <span
          className="core-btn-text"
        >
          Add source
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div />
</div>
`;

exports[`SettingsView should render with check for updates enabled 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <div
      className="core-settings-update-check-controls"
    >
      <ForwardRef(Bootstrap(FormCheck))
        checked={true}
        label="Check for updates at startup"
        onChange={[Function]}
        type="checkbox"
      />
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="mdi mdi-sync"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div
    className="core-settings-section"
    onDragEnter={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <h4>
      Extra app sources
    </h4>
    <table
      className="core-settings-sources"
    >
      <tbody />
    </table>
    <div
      className="core-settings-sources-controls"
    >
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        onClick={[Function]}
      >
        <span
          className="mdi mdi-playlist-plus"
        />
        <span
          className="core-btn-text"
        >
          Add source
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div />
</div>
`;

exports[`SettingsView should render with last update check date 1`] = `
<div>
  <div
    className="core-settings-section"
  >
    <h4>
      Updates
    </h4>
    <p>
      Last update check performed: 
      2017-02-03 13:41:36
    </p>
    <div
      className="core-settings-update-check-controls"
    >
      <ForwardRef(Bootstrap(FormCheck))
        checked={false}
        label="Check for updates at startup"
        onChange={[Function]}
        type="checkbox"
      />
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Check for updates now"
      >
        <span
          className="mdi mdi-sync"
        />
        <span
          className="core-btn-text"
        >
          Check for updates now
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div
    className="core-settings-section"
    onDragEnter={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <h4>
      Extra app sources
    </h4>
    <table
      className="core-settings-sources"
    >
      <tbody />
    </table>
    <div
      className="core-settings-sources-controls"
    >
      <ForwardRef(Bootstrap(Button))
        className="btn btn-primary core-btn"
        onClick={[Function]}
      >
        <span
          className="mdi mdi-playlist-plus"
        />
        <span
          className="core-btn-text"
        >
          Add source
        </span>
      </ForwardRef(Bootstrap(Button))>
    </div>
  </div>
  <div />
</div>
`;
